--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -5917,12 +5917,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 28\n",
+      "28 28\n",
+      "28 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, class_ in enumerate(['sta', 'dyn', 'sol']):\n",
+    "    fancy_name = \"Dynamics\" if class_ == 'dyn' else ('Solid Mechanics' if class_ == 'sol' else 'Statics')\n",
+    "    quiz = daily_quiz[class_]\n",
+    "    noquiz = daily_noquiz[class_]\n",
+    "\n",
+    "    print(len(quiz), len(noquiz))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
