--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,9 +362,9 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                    0   1   2   3   4    5    \n",
+       "                                                    0   1   2   3   4    5   \\\n",
        "Nth day                                                                       \n",
-       "/sta/                                               51  12  25  74  74  128  \\\n",
+       "/sta/                                               51  12  25  74  74  128   \n",
        "/dyn/                                               51  11  37  95  53   59   \n",
        "/sol/                                               47  46  29  40  81   80   \n",
        "/dyn/rigid_body_kinematics/                          4   3   5   6   5    8   \n",
@@ -376,9 +376,9 @@
        "/pl/course_instance/158221/assessment/2434759/c...   0   0   0   0   0    0   \n",
        "/pl/course_instance/158221/assessment/2434759/c...   0   0   0   0   0    0   \n",
        "\n",
-       "                                                     6    7   8   9   ...   \n",
+       "                                                     6    7   8   9   ...  \\\n",
        "Nth day                                                               ...   \n",
-       "/sta/                                               130  161  19  28  ...  \\\n",
+       "/sta/                                               130  161  19  28  ...   \n",
        "/dyn/                                                86   84  38  48  ...   \n",
        "/sol/                                                51   60  46  18  ...   \n",
        "/dyn/rigid_body_kinematics/                          10   28   5  11  ...   \n",
@@ -390,9 +390,9 @@
        "/pl/course_instance/158221/assessment/2434759/c...    0    0   0   0  ...   \n",
        "/pl/course_instance/158221/assessment/2434759/c...    0    0   0   0  ...   \n",
        "\n",
-       "                                                     69   70   71   72   73   \n",
+       "                                                     69   70   71   72   73  \\\n",
        "Nth day                                                                       \n",
-       "/sta/                                                19    8    6    7   24  \\\n",
+       "/sta/                                                19    8    6    7   24   \n",
        "/dyn/                                               128  139  127  198  121   \n",
        "/sol/                                               153  159  151  198  135   \n",
        "/dyn/rigid_body_kinematics/                          79   70  100  120  142   \n",
@@ -421,7 +421,7 @@
        "[107 rows x 79 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "  datetime.datetime(2024, 12, 21, 0, 0)]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "[77 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3038,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3957,8 +3957,34 @@
           0,
           1
          ],
+         "ticktext": [
+          "6",
+          "7",
+          "8",
+          "9",
+          "10",
+          "11",
+          "12",
+          "13",
+          "14",
+          "15",
+          "16"
+         ],
+         "tickvals": [
+          "2024-10-06T00:00:00",
+          "2024-10-13T00:00:00",
+          "2024-10-20T00:00:00",
+          "2024-10-27T00:00:00",
+          "2024-11-03T00:00:00",
+          "2024-11-10T00:00:00",
+          "2024-11-17T00:00:00",
+          "2024-11-24T00:00:00",
+          "2024-12-01T00:00:00",
+          "2024-12-08T00:00:00",
+          "2024-12-15T00:00:00"
+         ],
          "title": {
-          "text": "Date"
+          "text": "Week number"
          }
         },
         "yaxis": {
@@ -4893,8 +4919,34 @@
           0,
           1
          ],
+         "ticktext": [
+          "6",
+          "7",
+          "8",
+          "9",
+          "10",
+          "11",
+          "12",
+          "13",
+          "14",
+          "15",
+          "16"
+         ],
+         "tickvals": [
+          "2024-10-06T00:00:00",
+          "2024-10-13T00:00:00",
+          "2024-10-20T00:00:00",
+          "2024-10-27T00:00:00",
+          "2024-11-03T00:00:00",
+          "2024-11-10T00:00:00",
+          "2024-11-17T00:00:00",
+          "2024-11-24T00:00:00",
+          "2024-12-01T00:00:00",
+          "2024-12-08T00:00:00",
+          "2024-12-15T00:00:00"
+         ],
          "title": {
-          "text": "Date"
+          "text": "Week number"
          }
         },
         "yaxis": {
@@ -5829,8 +5881,34 @@
           0,
           1
          ],
+         "ticktext": [
+          "6",
+          "7",
+          "8",
+          "9",
+          "10",
+          "11",
+          "12",
+          "13",
+          "14",
+          "15",
+          "16"
+         ],
+         "tickvals": [
+          "2024-10-06T00:00:00",
+          "2024-10-13T00:00:00",
+          "2024-10-20T00:00:00",
+          "2024-10-27T00:00:00",
+          "2024-11-03T00:00:00",
+          "2024-11-10T00:00:00",
+          "2024-11-17T00:00:00",
+          "2024-11-24T00:00:00",
+          "2024-12-01T00:00:00",
+          "2024-12-08T00:00:00",
+          "2024-12-15T00:00:00"
+         ],
          "title": {
-          "text": "Date"
+          "text": "Week number"
          }
         },
         "yaxis": {
@@ -5877,9 +5955,12 @@
     "    fancy_name = \"Dynamics\" if class_ == 'dyn' else ('Solid Mechanics' if class_ == 'sol' else 'Statics')\n",
     "    fig.update_traces(line_color=blue)\n",
     "    \n",
+    "    tickvals = days[0]\n",
+    "    ticktext = [str(i+6) for i in range(len(tickvals))]\n",
+    "\n",
     "    fig.update_layout(\n",
     "        title=f\"Visitorship vs. Exam periods ({fancy_name})\",\n",
-    "        xaxis=dict(title=\"Date\"),\n",
+    "        xaxis=dict(title=\"Week number\", tickvals=tickvals, ticktext=ticktext),\n",
     "        yaxis=dict(title=\"Total visitorship\"),\n",
     "        height=500, \n",
     "        width=1000,\n",
