--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -6030,7 +6030,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "usr",
    "language": "python",
    "name": "python3"
   },
