making sure nothing gets deleted this time

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[107 rows x 79 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "  datetime.datetime(2024, 12, 21, 0, 0)]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "[77 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3038,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5971,16 +5971,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Statics & 2.276 & 0.01342 \\\\\n",
-      "Dynamics & 3.209 & 0.00112 \\\\\n",
-      "Solid Mechanics & 2.845 & 0.00313 \\\\\n"
+      "Statics & 451.2 & 256.0 & 2.276 & 0.01342 \\\\\n",
+      "Dynamics & 321.5 & 162.2 & 3.209 & 0.00112 \\\\\n",
+      "Solid Mechanics & 293.0 & 175.2 & 2.845 & 0.00313 \\\\\n"
      ]
     }
    ],
@@ -5993,7 +5993,7 @@
     "    noquiz = daily_noquiz[class_]\n",
     "    \n",
     "    t, p = stats.ttest_ind(quiz, noquiz, alternative='greater')\n",
-    "    print(f\"{fancy_name} & {round(t, 3)} & {round(p, 5)} \\\\\\\\\")"
+    "    print(f\"{fancy_name} & {round(np.mean(quiz), 1)} & {round(np.mean(noquiz), 1)} & {round(t, 3)} & {round(p, 5)} \\\\\\\\\")"
    ]
   },
   {
