--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[107 rows x 79 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,18 +445,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "339"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "roster_210 = pd.read_csv('./210_roster.csv')\n",
     "\n",
-    "n_students = roster_210.Number.value_counts()"
+    "n_students = roster_210.Number.value_counts()\n",
+    "\n",
+    "n_students[211]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +554,7 @@
        "  datetime.datetime(2024, 12, 21, 0, 0)]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +726,7 @@
        "[77 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2358,6 +2371,17 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Fall break",
+          "x": "2024-11-27T12:00:00",
+          "y": 1323.45
+         }
+        ],
+        "font": {
+         "size": 18
+        },
         "height": 500,
         "legend": {
          "tracegroupgap": 0
@@ -2369,6 +2393,21 @@
          "t": 20
         },
         "shapes": [
+         {
+          "fillcolor": "#aaaaaa",
+          "layer": "below",
+          "line": {
+           "width": 0
+          },
+          "opacity": 0.4,
+          "type": "rect",
+          "x0": "2024-11-24T00:00:00",
+          "x1": "2024-12-01T00:00:00",
+          "xref": "x",
+          "y0": "-1000",
+          "y1": "2000",
+          "yref": "y"
+         },
          {
           "line": {
            "color": "#f8766d",
@@ -2431,7 +2470,7 @@
          },
          {
           "line": {
-           "color": "#f8766d",
+           "color": "blue",
            "dash": "dash",
            "width": 3
           },
@@ -2446,7 +2485,7 @@
          },
          {
           "line": {
-           "color": "#f8766d",
+           "color": "blue",
            "dash": "dash",
            "width": 3
           },
@@ -3125,6 +3164,10 @@
           0,
           1
          ],
+         "range": [
+          -77.85000000000001,
+          1634.8500000000001
+         ],
          "title": {
           "text": "Page views"
          }
@@ -3320,6 +3363,17 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Fall break",
+          "x": "2024-11-27T12:00:00",
+          "y": 903.55
+         }
+        ],
+        "font": {
+         "size": 18
+        },
         "height": 500,
         "legend": {
          "tracegroupgap": 0
@@ -3331,6 +3385,21 @@
          "t": 20
         },
         "shapes": [
+         {
+          "fillcolor": "#aaaaaa",
+          "layer": "below",
+          "line": {
+           "width": 0
+          },
+          "opacity": 0.4,
+          "type": "rect",
+          "x0": "2024-11-24T00:00:00",
+          "x1": "2024-12-01T00:00:00",
+          "xref": "x",
+          "y0": "-1000",
+          "y1": "2000",
+          "yref": "y"
+         },
          {
           "line": {
            "color": "#f8766d",
@@ -3453,7 +3522,7 @@
          },
          {
           "line": {
-           "color": "#f8766d",
+           "color": "blue",
            "dash": "dash",
            "width": 3
           },
@@ -3468,7 +3537,7 @@
          },
          {
           "line": {
-           "color": "#f8766d",
+           "color": "blue",
            "dash": "dash",
            "width": 3
           },
@@ -4086,6 +4155,10 @@
          "domain": [
           0,
           1
+         ],
+         "range": [
+          -53.150000000000006,
+          1116.15
          ],
          "title": {
           "text": "Page views"
@@ -4282,6 +4355,17 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Fall break",
+          "x": "2024-11-27T12:00:00",
+          "y": 1264.8
+         }
+        ],
+        "font": {
+         "size": 18
+        },
         "height": 500,
         "legend": {
          "tracegroupgap": 0
@@ -4293,6 +4377,21 @@
          "t": 20
         },
         "shapes": [
+         {
+          "fillcolor": "#aaaaaa",
+          "layer": "below",
+          "line": {
+           "width": 0
+          },
+          "opacity": 0.4,
+          "type": "rect",
+          "x0": "2024-11-24T00:00:00",
+          "x1": "2024-12-01T00:00:00",
+          "xref": "x",
+          "y0": "-1000",
+          "y1": "2000",
+          "yref": "y"
+         },
          {
           "line": {
            "color": "#f8766d",
@@ -4415,7 +4514,7 @@
          },
          {
           "line": {
-           "color": "#f8766d",
+           "color": "blue",
            "dash": "dash",
            "width": 3
           },
@@ -4430,7 +4529,7 @@
          },
          {
           "line": {
-           "color": "#f8766d",
+           "color": "blue",
            "dash": "dash",
            "width": 3
           },
@@ -5049,6 +5148,10 @@
           0,
           1
          ],
+         "range": [
+          -74.4,
+          1562.4
+         ],
          "title": {
           "text": "Page views"
          }
@@ -5062,9 +5165,37 @@
    ],
    "source": [
     "for class_ in ['sta', 'sol', 'dyn']:\n",
+    "    init = dt.datetime(year=2024, month=10, day=6)\n",
+    "\n",
     "    fig = px.line(class_data, x=class_data.index, y=class_,)\n",
+    "    fig.update_layout(\n",
+    "    shapes=[\n",
+    "    dict(\n",
+    "        type=\"rect\",\n",
+    "        xref=\"x\",\n",
+    "        yref=\"y\",\n",
+    "        x0=init+dt.timedelta(weeks=7),\n",
+    "        y0=\"-1000\",\n",
+    "        x1=init+dt.timedelta(weeks=8),\n",
+    "        y1=\"2000\",\n",
+    "        fillcolor=\"#aaaaaa\",\n",
+    "        opacity=0.4,\n",
+    "        line_width=0,\n",
+    "        layer=\"below\"\n",
+    "    )\n",
+    "    ],\n",
+    "    font=dict(\n",
+    "        size=18,  # Set the font size here\n",
+    "    )\n",
+    "    )   \n",
+    "\n",
+    "    fig.add_annotation(\n",
+    "        x=init+dt.timedelta(weeks=7, days=3.5), y=class_data[class_].max()*.85,\n",
+    "        text=\"Fall break\",\n",
+    "        showarrow=False\n",
+    "    )\n",
+    "\n",
     "    for week in range(10):\n",
-    "        init = dt.datetime(year=2024, month=10, day=6)\n",
     "        if class_ == \"sol\" and week in [0, 2, 4]:\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=3.5), **style)\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=6.5), **style)\n",
@@ -5072,14 +5203,18 @@
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=2.5), **style)\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=5.5), **style)\n",
     "        if (class_ == 'sol' or class_ =='dyn') and week == 9:\n",
-    "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=3.5), **style)\n",
-    "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=8.5), **style)\n",
+    "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=3.5), **dict(line_width=3, line_dash=\"dash\", line_color='blue', opacity=1))\n",
+    "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=8.5), **dict(line_width=3, line_dash=\"dash\", line_color='blue', opacity=1))\n",
     "        if class_ =='sta' and week == 9:\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=.5), **style)\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=3.5), **style)\n",
     "        if class_ == \"sta\" and week in [0, 2, 5]:\n",
-    "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=2.5), **style)\n",
-    "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=5.5), **style)\n",
+    "            if week ==5:\n",
+    "                fig.add_vline(x=init+dt.timedelta(weeks=week, days=2.5), **dict(line_width=3, line_dash=\"dash\", line_color='blue', opacity=1))\n",
+    "                fig.add_vline(x=init+dt.timedelta(weeks=week, days=5.5), **dict(line_width=3, line_dash=\"dash\", line_color='blue', opacity=1))\n",
+    "            else:\n",
+    "                fig.add_vline(x=init+dt.timedelta(weeks=week, days=2.5), **style)\n",
+    "                fig.add_vline(x=init+dt.timedelta(weeks=week, days=5.5), **style)\n",
     "        if class_ == \"dyn\" and week in [1, 3, 5, 8]:\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=1.5), **style)\n",
     "            fig.add_vline(x=init+dt.timedelta(weeks=week, days=4.5), **style)\n",
@@ -5092,11 +5227,15 @@
     "\n",
     "    fig.update_layout(\n",
     "        xaxis=dict(title=\"Week number\", tickvals=tickvals, ticktext=ticktext),\n",
-    "        yaxis=dict(title=\"Page views\"),\n",
+    "        yaxis=dict(title=\"Page views\", range=[-class_data[class_].max()*.05, class_data[class_].max()*1.05]),\n",
     "        height=500, \n",
     "        width=1200,\n",
     "        margin=dict(l=40, r=20, t=20, b=40),\n",
     "    )\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "\n",
     "    #fig.update_layout(xaxis_title=None)\n",
     "\n",
@@ -5106,7 +5245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5133,26 +5272,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28 28\n",
-      "28 28\n",
-      "28 28\n"
+      "Statics\n",
+      "TtestResult(statistic=3.3083974527590927, pvalue=0.0015988597618013076, df=22.0)\n",
+      "Dynamics\n",
+      "TtestResult(statistic=3.964318730561231, pvalue=0.00032896568505439577, df=22.0)\n",
+      "Solid Mechanics\n",
+      "TtestResult(statistic=2.7314914868131837, pvalue=0.006092296013438889, df=22.0)\n"
      ]
     }
    ],
    "source": [
     "for i, class_ in enumerate(['sta', 'dyn', 'sol']):\n",
     "    fancy_name = \"Dynamics\" if class_ == 'dyn' else ('Solid Mechanics' if class_ == 'sol' else 'Statics')\n",
-    "    quiz = daily_quiz[class_]\n",
-    "    noquiz = daily_noquiz[class_]\n",
+    "    quiz_week = daily_quiz[class_]\n",
+    "    noquiz_week = daily_noquiz[class_]\n",
     "\n",
-    "    print(len(quiz), len(noquiz))"
+    "    start = {\n",
+    "        'sta': 3,\n",
+    "        'dyn': 2,\n",
+    "        'sol': 4\n",
+    "    }\n",
+    "\n",
+    "    q = []\n",
+    "    nq = []\n",
+    "\n",
+    "    for w in range(4):\n",
+    "        for d in range(3):\n",
+    "            q += [quiz_week[7*w+start[class_]+d]]\n",
+    "            nq += [noquiz_week[7*w+start[class_]+d]]\n",
+    "\n",
+    "    print(fancy_name)\n",
+    "    print(stats.ttest_ind(q, nq, alternative='greater'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print()"
    ]
   },
   {
@@ -5165,7 +5331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "usr",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
